syntax = "proto3";

package org.xanho.proto.service.knowledgegraph;

import "org/xanho/proto/graph/graph.proto";

service KnowledgeGraphService {

  rpc MessagesStream(MessagesStreamRequest) returns (stream TextMessage);

  rpc SendTextMessage(SendTextMessageRequest) returns (SendTextMessageResponse);

  rpc GetGraph(GetGraphRequest) returns (GetGraphResponse);

}

message MessagesStreamRequest {
  string graphId = 1;
}

message TextMessage {
  string id = 1;
  MessageSource source = 2;
  int64 timestampMs = 3;
  string text = 4;
}

enum MessageSource {
  USER = 0;
  SYSTEM = 1;
}

message SendTextMessageRequest {
  string graphId = 1;
  TextMessage message = 2;
}

message SendTextMessageResponse {
  string graphId = 1;
  bool success = 2;
}

message GetGraphRequest {
  string graphId = 1;
}

message GetGraphResponse {
  string graphId = 1;
  org.xanho.proto.graph.Graph graph = 2;
}
